[gd_scene load_steps=22 format=2]

[ext_resource path="res://Images/Lighting/cyan_light.png" type="Texture" id=1]
[ext_resource path="res://Images/Sprites/save-sheet.png" type="Texture" id=2]
[ext_resource path="res://Actors/Save_Point.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 366, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 366, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 488, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 610, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 122, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 244, 0, 122, 122 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": false,
"name": "Speak",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.9999
height = 40.0001

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 2, 36, 3, 32, 6, 28, 10, 23, 19.0113, 23.8192, 21, 25, 23.2446, 23.813, 33, 23, 33, 21, 28, 20, 23, 18, 23, 17, 21, 15, 17, 19, 10, 19, 7, 18, 3, 20, -2, 21, -7.48609, 20.2757, -10, 19, -12, 20, -17, 21, -20, 19, -21, 16, -20, 8, -26, 16, -30, 18, -35, 19, -35, 20, -31, 21, -26, 21, -26, 23, -26, 25, -27, 27, -30, 30, -30, 32, -27, 32, -18, 26, -15, 26, -12, 26, -8, 29, -3.93005, 32.9433, 0, 36 )

[sub_resource type="Animation" id=14]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=15]
resource_name = "Speak"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Speak", "Speak" ]
}

[sub_resource type="CircleShape2D" id=16]
radius = 65.0

[sub_resource type="Animation" id=24]
resource_name = "Save"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 14 ), Vector2( 79, 14 ), Vector2( 79, 14 ), Vector2( 79, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.6, 2.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -39, -48 ), Vector2( -39, -52 ), Vector2( -39, -54 ), Vector2( -39, -56 ), Vector2( -39, -60 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:align")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=25]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Glow:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sparkle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=26]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Glow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sparkle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="ParticlesMaterial" id=28]
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
direction = Vector3( 0, -100, 0 )
spread = 40.0
flatness = 1.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = -0.1
orbit_velocity_random = 1.0
linear_accel = 1.0
linear_accel_random = 1.0
color = Color( 0.431373, 1, 0.85098, 1 )
hue_variation = 1.0
hue_variation_random = 0.1

[node name="Save_Point" type="StaticBody2D"]
z_index = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 193.0, 182.0, -36.0, -36.0, -60.0, -49.0 ],
"_edit_vertical_guides_": [ 513.0, 510.0, -32.0, -39.0 ]
}

[node name="CanvasLayer" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.691322 )
z_index = 99
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 0.28
margin_left = -39.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = -34.0
text = "Game Saved"
align = 1

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, -7 )
frames = SubResource( 13 )
animation = "Idle"
playing = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 35 )
rotation = 1.5708
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 1, 14 )
occluder = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Glow" type="Light2D" parent="."]
position = Vector2( -3, -14 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
color = Color( 1, 0.882353, 0.882353, 1 )
energy = 0.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
autoplay = "Idle"
anims/Idle = SubResource( 14 )
anims/Speak = SubResource( 15 )

[node name="Save_Area" type="Area2D" parent="."]
position = Vector2( 12, -7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Save_Area"]
position = Vector2( -12, 7 )
shape = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimLabel" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer/Label")
anims/Save = SubResource( 24 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="GlowLightShow" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 25 )
anims/Idle = SubResource( 26 )
anims/RESET = SubResource( 27 )

[node name="Sparkle" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, -20 )
amount = 6
lifetime = 0.8
preprocess = 1.0
randomness = 0.5
visibility_rect = Rect2( -100, -100, 100, 100 )
process_material = SubResource( 28 )

[connection signal="area_entered" from="Save_Area" to="." method="_on_Save_Area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
